--- a/README
+++ b/README
@@ -31,7 +31,7 @@ DEPENDENCIES
 
 COPYRIGHT AND LICENSE
 
-Copyright (C) 2002 D. Hageman (Dracken Technologies).
+Copyright (C) 2002-2003 D. Hageman (Dracken Technologies).
 All rights reserved.
 
 This program is free software; you can redistribute it and/or modify 
